# inception-external-recommender-v2

./: .gitignore  .readthedocs.yaml  Makefile  README.md  TODO.txt  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run_tests.yaml
docs/sphinx/: api.rst  conf.py  index.rst
examples/: gradio_demo.py
galahad/: app.py  classifier.py  client.py  dataclasses.py  document_index.py  model.py  routes.py  server.py  util.py
galahad/client/: api_client.py  api_client_ui.py  api_client_ui_ner.py  api_client_ui_pos.py  api_client_ui_sentence_classification.py  formats.py  gradio_utils.py  start_server.py
galahad/contrib/: sklearn.py
galahad/server/: __init__.py  annotations.py  classifier.py  config.py  dataclasses.py  document_index.py  routes.py  server.py  util.py
galahad/server/contrib/: sklearn.py
galahad/server/contrib/ner/: spacy_ner.py
galahad/server/contrib/pos/: spacy_pos.py
galahad/server/contrib/sentence_classification/: sklearn_sentence_classifier.py
scripts/: inception_integration_test.py
tests/: fixtures.py  test_app.py  test_client.py  test_document_index.py  test_formats.py  test_server.py
tests/client/: test_api_client.py  test_formats.py
tests/contrib/: test_ner_classifier.py  test_pos_classifier.py  test_sentence_classifier.py  test_sklearn.py  test_spacy_ner.py  test_spacy_pos.py
