[tool.poetry]
name = "galahad"
version = "0.1.0"
description = "Machine learning model server that can predict AND train"
authors = ["Jan-Christoph Klie <git@mrklie.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
requests = "^2.27.1"
joblib = "^1.1.0"
filelock = "^3.6.0"
sortedcontainers = "^2.4.0"

[tool.poetry.group.contrib.dependencies]
scikit-learn = "^1.0.2"
spacy = "^3.2.3"
nltk = "^3.7"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.1"
datasets = "^2.0.0"

[tool.poetry.group.demo.dependencies]
gradio = "^2.8.12"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
isort = "^5.10.1"
poethepoet = "^0.13.1"

[tool.poe.tasks]
black = "black -l 120 galahad/ tests/ scripts/ examples/"
isort = "isort --profile black galahad/ tests/ scripts/ examples/"
format = ["black", "isort"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
